# ark-agent-core

./: README.md  pyproject.toml
ark_agent_core/: __init__.py
ark_agent_core/cli/: __init__.py  main.py
ark_agent_core/conversation/: __init__.py  memory.py  planner.py  progress.py  session.py  session_manager.py
ark_agent_core/llm/: __init__.py  gemini.py  kiro_adapter.py  llm_router.py  ollama.py
ark_agent_core/scheduler/: __init__.py  engine.py
ark_agent_core/skills/: __init__.py  base.py  registry.py
ark_agent_core/skills/builtin/: __init__.py  cost_tracker.py  data_transform.py  db_query.py  echo.py  file_export.py  html_chart.py  template_render.py
ark_agent_core/skills/builtin/llm/: __init__.py  llm_analyze.py  llm_qa.py  llm_summarize.py  parse_intent.py
ark_agent_core/skills/builtin/wiki/: __init__.py  wiki_graph.py  wiki_hybrid_search.py  wiki_ingest.py  wiki_lint.py  wiki_query.py  wiki_rag_bridge.py  wiki_schema.py  wiki_template.py
ark_agent_core/templates/project_skeleton/: .env.example  .gitignore  README.md  requirements.txt
ark_agent_core/templates/project_skeleton/knowledge/my-project/: index.md  log.md  schema.md
ark_agent_core/templates/project_skeleton/src/: __init__.py
ark_agent_core/templates/project_skeleton/src/server/: __init__.py  main.py
ark_agent_core/templates/project_skeleton/src/skills/: __init__.py
ark_agent_core/templates/project_skeleton/workflows/: hello.yaml
ark_agent_core/workflow/: __init__.py  context.py  engine.py
docs/: 5-minute-quickstart.md  custom-skill-guide.md  workflow-guide.md
(+1 files in other folders)
